<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator - Luca DeCaprio</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="tenPercentString">10%</string>
    <string name="fifteenPercentString">15%</string>
    <string name="twentyPercentString">20%</string>
    <string name="billTotalString">Bill total:</string>
    <string name="tipString">Tip:</string>
    <string name="totalString">Total:</string>
    <string name="blankString"></string>
    <string name="customString">Custom:</string>
    <string name="defaultPercent">18%</string>
    <string name="finalTipString">Tip:</string>
    <string name="finalTotalString">Total:</string>
    <string name="zero">0.00</string>
    <string name="helpButtonString">Help</string>

</resources>